--- a/ClientWPF/Pages/Connect.xaml
+++ b/ClientWPF/Pages/Connect.xaml
@@ -107,18 +107,63 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <SolidColorBrush x:Key="TextBox.Static.Border1" Color="#FFABAdB3"/>
+        <SolidColorBrush x:Key="TextBox.MouseOver.Border1" Color="#FF7EB4EA"/>
+        <SolidColorBrush x:Key="TextBox.Focus.Border1" Color="#FF569DE5"/>
+        <Style x:Key="PasswordBoxStyle1" TargetType="{x:Type PasswordBox}">
+            <Setter Property="PasswordChar" Value="●"/>
+            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border1}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="AllowDrop" Value="true"/>
+            <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
+            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type PasswordBox}">
+                        <Border x:Name="border" CornerRadius="7" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="True">
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.MouseOver.Border1}"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.Focus.Border1}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
+                        <Condition Property="IsSelectionActive" Value="false"/>
+                    </MultiTrigger.Conditions>
+                    <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                </MultiTrigger>
+            </Style.Triggers>
+        </Style>
     </Page.Resources>
 
     <Grid Background="#FF516A80">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <Label Content="IP:" Height="30" FontSize="15" Foreground="White"/>
-            <TextBox x:Name="ip" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}"/>
+            <TextBox x:Name="ip" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center"/>
             <Label Content="Port:" Height="30" FontSize="15" Foreground="White"/>
-            <TextBox x:Name="port" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}"/>
+            <TextBox x:Name="port" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center"/>
             <Label Content="Login:" Height="30" FontSize="15" Foreground="White" Margin="0,10,0,0"/>
-            <TextBox x:Name="login" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}"/>
+            <TextBox x:Name="login" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center"/>
             <Label Content="Password:" Height="30" FontSize="15" Foreground="White"/>
-            <TextBox x:Name="password" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}"/>
+            <PasswordBox Style="{DynamicResource PasswordBoxStyle1}" x:Name="password" Height="30" FontSize="15" Width="300" VerticalContentAlignment="Center"/>
             <Button Style="{DynamicResource ButtonStyle1}" Content="Connection" Click="Open" Height="32" FontSize="15" VerticalContentAlignment="Center" Width="150" Margin="0,30,0,0" Background="#FF29465F" Foreground="White" BorderBrush="Black"/>
         </StackPanel>
     </Grid>
