--- a/ClientWPF/Pages/Connect.xaml
+++ b/ClientWPF/Pages/Connect.xaml
@@ -154,17 +154,22 @@
         </Style>
     </Page.Resources>
 
-    <Grid Background="#FF516A80">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Content="IP:" Height="30" FontSize="15" Foreground="White"/>
-            <TextBox x:Name="ip" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center"/>
-            <Label Content="Port:" Height="30" FontSize="15" Foreground="White"/>
-            <TextBox x:Name="port" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center"/>
-            <Label Content="Login:" Height="30" FontSize="15" Foreground="White" Margin="0,10,0,0"/>
-            <TextBox x:Name="login" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center"/>
-            <Label Content="Password:" Height="30" FontSize="15" Foreground="White"/>
-            <PasswordBox Style="{DynamicResource PasswordBoxStyle1}" x:Name="password" Height="30" FontSize="15" Width="300" VerticalContentAlignment="Center"/>
-            <Button Style="{DynamicResource ButtonStyle1}" Content="Connection" Click="Open" Height="32" FontSize="15" VerticalContentAlignment="Center" Width="150" Margin="0,30,0,0" Background="#FF29465F" Foreground="White" BorderBrush="Black"/>
-        </StackPanel>
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Images/background.jpg"/>
+        </Grid.Background>
+        <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="350" Height="370" Background="#E51D3C27" CornerRadius="7" BorderBrush="White" BorderThickness="1.5">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Label Content="IP:" Height="30" FontSize="15" Foreground="White"/>
+                <TextBox x:Name="ip" Text="127.0.0.1" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center" Padding="5,0,5,0"/>
+                <Label Content="Port:" Height="30" FontSize="15" Foreground="White"/>
+                <TextBox x:Name="port" Text="5005" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center" Padding="5,0,5,0"/>
+                <Label Content="Login:" Height="30" FontSize="15" Foreground="White" Margin="0,10,0,0"/>
+                <TextBox x:Name="login" Height="30" FontSize="15" Width="300" Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center" Padding="5,0,5,0"/>
+                <Label Content="Password:" Height="30" FontSize="15" Foreground="White"/>
+                <PasswordBox Style="{DynamicResource PasswordBoxStyle1}" x:Name="password" Height="30" FontSize="15" Width="300" VerticalContentAlignment="Center" Padding="5,0,5,0"/>
+                <Button Style="{DynamicResource ButtonStyle1}" Content="Connection" Click="Open" Height="32" FontSize="15" VerticalContentAlignment="Center" Width="150" Margin="0,30,0,0" Background="#FF486B4D" Foreground="White" BorderBrush="#FF1D3820"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
