--- a/ClientWPF/Pages/Main.xaml
+++ b/ClientWPF/Pages/Main.xaml
@@ -63,11 +63,62 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <SolidColorBrush x:Key="TextBox.Static.Border" Color="#FFABAdB3"/>
+        <SolidColorBrush x:Key="TextBox.MouseOver.Border" Color="#FF7EB4EA"/>
+        <SolidColorBrush x:Key="TextBox.Focus.Border" Color="#FF569DE5"/>
+        <Style x:Key="TextBoxStyle1" TargetType="{x:Type TextBox}">
+            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="AllowDrop" Value="true"/>
+            <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
+            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Border x:Name="border" CornerRadius="7" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="True">
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.MouseOver.Border}"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.Focus.Border}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
+                        <Condition Property="IsSelectionActive" Value="false"/>
+                    </MultiTrigger.Conditions>
+                    <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                </MultiTrigger>
+            </Style.Triggers>
+        </Style>
     </Page.Resources>
 
-    <Grid Background="#FF516A80">
-        <Button Click="Back" Content="Back" Foreground="#FF29465F" Height="30" FontSize="15" Width="100" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20" Style="{DynamicResource ButtonStyle1}"/>
-        <ListBox x:Name="list" Margin="20,60,20,60" Background="White" MouseDoubleClick="ListOpenFold"/>
-        <Button Click="Load" Content="Load file" Height="30" FontSize="15" Width="150" Foreground="#FF29465F" Background="White" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20" Style="{DynamicResource ButtonStyle1}"/>
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Images/background.jpg"/>
+        </Grid.Background>
+        <Button Click="Back" Content="Back" Foreground="#FF235428" Height="30" FontSize="15" Width="100" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20" Style="{DynamicResource ButtonStyle1}"/>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,20,80,0">
+            <TextBox Style="{DynamicResource TextBoxStyle1}" VerticalContentAlignment="Center" x:Name="search" FontSize="15" Height="30" Padding="5,0,5,0" Width="450" Background="White"/>
+            <Button Click="Find" Height="30" FontSize="15" Content="Find" Width="70" Background="White" Foreground="#FF235428" Margin="10,0,0,0" Style="{DynamicResource ButtonStyle1}"/>
+        </StackPanel>
+        <ListBox x:Name="list" Margin="20,60,20,60" Background="#CCFFFFFF" MouseDoubleClick="ListOpenFold"/>
+        <Button Click="Load" Content="Load file" Height="30" FontSize="15" Width="150" Foreground="#FF235428" Background="White" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20" Style="{DynamicResource ButtonStyle1}"/>
     </Grid>
 </Page>
